--- a/Git/Tigie/app/build.gradle
+++ b/Git/Tigie/app/build.gradle
@@ -33,4 +33,15 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile files('libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.google.guava:guava:16.0.1'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
