--- a/Git/Tigie/app/src/main/AndroidManifest.xml
+++ b/Git/Tigie/app/src/main/AndroidManifest.xml
@@ -21,11 +21,13 @@
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"
+            />
 
         <activity android:name=".SubheadingsActivity" />
         <activity android:name=".FractionActivity" />
-        <activity android:name=".FractionInformationActivity"></activity>
+        <activity android:name=".FractionInformationActivity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
